# backend/src/your_project_name/models/__init__.py
@@ -1,15 +1,15 @@
-from your_project_name.models.post import Post, PostNatureEnum, PostPublic
+from your_project_name.models.article import Article, ArticleNatureEnum, ArticlePublic
 from your_project_name.models.support.http_error_response import HTTPErrorResponse
 from your_project_name.models.support.http_validation_error import HTTPValidationError
 from your_project_name.models.support.paginated_records import PaginatedRecords
 from your_project_name.models.support.validation_error import ValidationError
 
 __all__ = [
-    "Post",
-    "PostPublic",
+    "Article",
+    "ArticlePublic",
     "HTTPErrorResponse",
     "ValidationError",
     "HTTPValidationError",
-    "PostNatureEnum",
+    "ArticleNatureEnum",
     "PaginatedRecords",
 ]
