# backend/src/your_project_name/models/article.py
@@ -5,7 +5,7 @@ from typing import Optional
 from sqlmodel import Field, SQLModel, Text
 
 
-class PostNatureEnum(str, Enum):
+class ArticleNatureEnum(str, Enum):
     SCIENTIFIC = "scientific"
     STANDARD = "standard"
     JOURNAL = "journal"
@@ -15,7 +15,7 @@ def utc_now() -> datetime:
     return datetime.now(UTC)
 
 
-class PostInputBase(SQLModel):
+class ArticleInputBase(SQLModel):
     title: str = Field(min_length=1, max_length=255, nullable=False)
     content: str = Field(
         sa_type=Text,
@@ -23,26 +23,26 @@ class PostInputBase(SQLModel):
         min_length=1,
         max_length=255,
     )
-    nature: PostNatureEnum = Field(
+    nature: ArticleNatureEnum = Field(
         min_length=1,
         max_length=255,
         nullable=False,
     )
 
 
-class PostBase(PostInputBase):
+class ArticleBase(ArticleInputBase):
     user_uid: str = Field(min_length=1, max_length=255, nullable=False)
 
 
-class Post(PostBase, table=True):
-    __tablename__ = "posts"
+class Article(ArticleBase, table=True):
+    __tablename__ = "articles"
 
     id: Optional[int] = Field(default=None, primary_key=True)
     created_at: datetime = Field(default_factory=utc_now, nullable=False)
     updated_at: datetime = Field(default_factory=utc_now, nullable=False)
 
 
-class PostPublic(PostBase):
+class ArticlePublic(ArticleBase):
     id: int
     created_at: datetime
     updated_at: datetime
