# backend/src/your_project_name/routers/api/articles.py
@@ -6,10 +6,10 @@ from your_project_name.exceptions import (
     UnauthorizedError,
     UnprocessableContentError,
 )
-from your_project_name.models import PaginatedRecords, PostNatureEnum, PostPublic
-from your_project_name.services.posts import (
-    CreatePostInputDto,
-    UpdatePostInputDto,
+from your_project_name.models import PaginatedRecords, ArticleNatureEnum, ArticlePublic
+from your_project_name.services.articles import (
+    CreateArticleInputDto,
+    UpdateArticleInputDto,
     create,
     delete_by_or_fail,
     find_all_by,
@@ -18,7 +18,7 @@ from your_project_name.services.posts import (
 )
 
 router = APIRouter(
-    prefix="/posts",
+    prefix="/articles",
     responses=UnauthorizedError.RESPONSE,
 )
 
@@ -27,13 +27,13 @@ router = APIRouter(
     path="",
     responses=UnprocessableContentError.RESPONSE,
 )
-def get_posts(
+def get_articles(
     auth_context: GetAuthContext,
     session: GetSession,
     page: int = Query(1, ge=1),
     page_size: int = Query(10, ge=1, le=100),
-    nature: PostNatureEnum | None = None,
-) -> PaginatedRecords[PostPublic]:
+    nature: ArticleNatureEnum | None = None,
+) -> PaginatedRecords[ArticlePublic]:
     return find_all_by(
         session,
         user_uid=auth_context.user_uid,
@@ -47,11 +47,11 @@ def get_posts(
     path="",
     responses=UnprocessableContentError.RESPONSE,
 )
-def create_post(
-    input: CreatePostInputDto,
+def create_article(
+    input: CreateArticleInputDto,
     auth_context: GetAuthContext,
     session: GetSession,
-) -> PostPublic:
+) -> ArticlePublic:
     return create(session, user_uid=auth_context.user_uid, input=input)
 
 
@@ -59,11 +59,11 @@ def create_post(
     path="/{id}",
     responses=NotFoundError.RESPONSE | UnprocessableContentError.RESPONSE,
 )
-def get_post(
+def get_article(
     id: int,
     auth_context: GetAuthContext,
     session: GetSession,
-) -> PostPublic:
+) -> ArticlePublic:
     return find_by_or_fail(session, user_uid=auth_context.user_uid, id=id)
 
 
@@ -71,12 +71,12 @@ def get_post(
     path="/{id}",
     responses=NotFoundError.RESPONSE | UnprocessableContentError.RESPONSE,
 )
-def update_post(
+def update_article(
     id: int,
-    input: UpdatePostInputDto,
+    input: UpdateArticleInputDto,
     auth_context: GetAuthContext,
     session: GetSession,
-) -> PostPublic:
+) -> ArticlePublic:
     return update(session, user_uid=auth_context.user_uid, id=id, input=input)
 
 
@@ -85,7 +85,7 @@ def update_post(
     status_code=status.HTTP_204_NO_CONTENT,
     responses=NotFoundError.RESPONSE | UnprocessableContentError.RESPONSE,
 )
-def delete_post(
+def delete_article(
     id: int,
     auth_context: GetAuthContext,
     session: GetSession,
